# db-concurrency-control

./: README.md  display_table.py  pyproject.toml
locks/: optimistic_locking.py  shared_locks.py
optimistic-control/: optimistic_locking.py
pessimistic-control/: pessimistic_reads.py  pessimistic_updates.py
table_init_scripts/: init_seat_assignment_table.py
utils/: db_connector.py
