[tool.poetry]
name = "db-concurrency-control"
version = "0.1.0"
description = ""
authors = ["savarmehrotra <savarmehrotra@gmail.com>"]
readme = "README.md"
packages = [{include = "db_concurrency_control"}]

[tool.poetry.dependencies]
python = "^3.9"
pymysql = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
